; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_addall.c_test_index_addall__adds_conflicts.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_addall.c_test_index_addall__adds_conflicts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [14 x i8] c"merge-resolve\00", align 1
@g_repo = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [18 x i8] c"refs/heads/branch\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_addall__adds_conflicts() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = call i32 @cl_git_sandbox_init(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str, i64 0, i64 0))
  store i32 %4, i32* @g_repo, align 4
  %5 = load i32, i32* @g_repo, align 4
  %6 = call i32 @git_repository_index(i32** %1, i32 %5)
  %7 = call i32 @cl_git_pass(i32 %6)
  %8 = load i32, i32* @g_repo, align 4
  %9 = call i32 @check_status(i32 %8, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0, i32 0)
  %10 = load i32, i32* @g_repo, align 4
  %11 = call i32 @git_reference_lookup(i32** %2, i32 %10, i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.1, i64 0, i64 0))
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = load i32, i32* @g_repo, align 4
  %14 = load i32*, i32** %2, align 8
  %15 = call i32 @git_annotated_commit_from_ref(i32** %3, i32 %13, i32* %14)
  %16 = call i32 @cl_git_pass(i32 %15)
  %17 = load i32, i32* @g_repo, align 4
  %18 = call i32 @git_merge(i32 %17, i32** %3, i32 1, i32* null, i32* null)
  %19 = call i32 @cl_git_pass(i32 %18)
  %20 = load i32, i32* @g_repo, align 4
  %21 = call i32 @check_status(i32 %20, i32 0, i32 1, i32 2, i32 0, i32 0, i32 0, i32 0, i32 1)
  %22 = load i32*, i32** %1, align 8
  %23 = call i32 @git_index_add_all(i32* %22, i32* null, i32 0, i32* null, i32* null)
  %24 = call i32 @cl_git_pass(i32 %23)
  %25 = load i32*, i32** %1, align 8
  %26 = call i32 @git_index_write(i32* %25)
  %27 = call i32 @cl_git_pass(i32 %26)
  %28 = load i32, i32* @g_repo, align 4
  %29 = call i32 @check_status(i32 %28, i32 0, i32 1, i32 3, i32 0, i32 0, i32 0, i32 0, i32 0)
  %30 = load i32*, i32** %3, align 8
  %31 = call i32 @git_annotated_commit_free(i32* %30)
  %32 = load i32*, i32** %2, align 8
  %33 = call i32 @git_reference_free(i32* %32)
  %34 = load i32*, i32** %1, align 8
  %35 = call i32 @git_index_free(i32* %34)
  ret void
}

declare dso_local i32 @cl_git_sandbox_init(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @check_status(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @git_reference_lookup(i32**, i32, i8*) #1

declare dso_local i32 @git_annotated_commit_from_ref(i32**, i32, i32*) #1

declare dso_local i32 @git_merge(i32, i32**, i32, i32*, i32*) #1

declare dso_local i32 @git_index_add_all(i32*, i32*, i32, i32*, i32*) #1

declare dso_local i32 @git_index_write(i32*) #1

declare dso_local i32 @git_annotated_commit_free(i32*) #1

declare dso_local i32 @git_reference_free(i32*) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
